# ma-crossover-backtest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
notebooks/: 01_basic_backtest.ipynb  02_parameter_sweep.ipynb  03_walk_forward.ipynb  04_multi_asset.ipynb  05_final_report.ipynb  _generate.py
scripts/: generate_assets.py  reproduce.sh  screenshot_dashboard.py
src/ma_backtester/: __init__.py  __main__.py  backtester.py  benchmark.py  cli.py  config.py  costs.py  data.py  data_snooping.py  metrics.py  plotting.py  results.py  strategy.py  walk_forward.py
src/ma_backtester/data_providers/: __init__.py  exceptions.py  factory.py  polygon.py  yfinance.py
tests/: conftest.py  test_app.py  test_backtester.py  test_benchmark.py  test_cli.py  test_costs.py  test_data.py  test_data_snooping.py  test_factory.py  test_metrics.py  test_no_lookahead.py  test_plotting.py  test_polygon_provider.py  test_strategy.py  test_walk_forward.py  test_yfinance_provider.py
